Stop dismissing selection handles when selection is kept

When we finish composing text and keep selection, selection handles get
dismissed because of intermediate selection changes, even though the final
selection will not change.

BUG=630137

Review-Url: https://codereview.chromium.org/2646963002
Cr-Commit-Position: refs/heads/master@{#448875}

Former-commit-id: 29810350d256c855e8d1af4c715b28da3a992336