third_party/WebKit/Source/core/editing/InputMethodController.h
@@ -126,6 +126,10 @@ class CORE_EXPORT InputMethodController final
 
   String composingText() const;
   void selectComposition() const;
+
+  EphemeralRange ephemeralRangeForOffsets(const PlainTextRange&) const;
+
+  // Returns true if selection offsets were successfully set.
   bool setSelectionOffsets(
       const PlainTextRange&,
       FrameSelection::SetSelectionOptions = FrameSelection::CloseTyping);
